correcciones openapi - cors - checking if guild exists
